Version 4.5 - 7 March 2008, Thierry Vignaud

- reimplement priority upgrade support through urpmi-5.9's
  infrastructure
- when restarting after priority upgrade, free memory used by previous
  rpmdrake instance

Version 4.4.2.3 - 6 March 2008, Thierry Vignaud

- MandrivaUpdate:
  o list again unselect skipped updates (minor regression in 4.4.2)

Version 4.4.2.2 - 6 March 2008, Thierry Vignaud

- fix error introduced in 4.4.2.1

Version 4.4.2.1 - 6 March 2008, Thierry Vignaud

- fix error introduced in 4.4.2

Version 4.4.2 - 6 March 2008, Thierry Vignaud

- MandrivaUpdate:
  o fix not listing all updates (#*38595)
    (regression introduced in 4.4 with 'remember state of "Show
    automatically selected packages" (#38138)'
- rpmdrake:
  o don't select all updates by default in rpmdrake (#38611)
    (regression introduced in 4.3.2 with "handle priority upgrade list")

Version 4.4.1 - 5 March 2008, Thierry Vignaud

- fix crash (#38514) due to not having commited all bits of 'remember
  state of "Show automatically selected packages" (#38138)'
- rpmdrake:
  o do not reset search field (#35244)

Version 4.4 - 5 March 2008, Thierry Vignaud

- do not warn about empty package names (#38480)
- rpmdrake:
  o make search box larger (#38298)
  o remember latest view mode (#38138)
  o remember state of "Show automatically selected packages" (#38138)

Version 4.3.2 - 5 March 2008, Thierry Vignaud

- adapt to urpmi-5.7 API:
  o don't want to force a device anymore
  o handle new "cdrom://" type
- handle --test
- handle priority upgrade list
- reuse more urpmi code

Version 4.3.1 - Wed Feb 27 2008, Thierry Vignaud

- rpmdrake's package list:
  o make select checkbox not activatable for base packages instead of
    popup an explanation
  o update icon set

Version 4.3 - Tue Feb 26 2008, Thierry Vignaud

- display size of data to downloaded (#32154)
- make clearer why there's no medium (#37033) (maybe should we just
  not display the medium for installed packages like old_rpmdrake