@@ -1,3 +1,7 @@
+- MandrivaUpdate:
+  o faster startup if there're priority updates
+  o only list priority updates if existing
+
 Version 4.5 - 7 March 2008, Thierry Vignaud
 
 - reimplement priority upgrade support through urpmi-5.9's
